Nav bar, hero section and information section of landing page done

--- a/Landing-page.html
+++ b/Landing-page.html
@@ -1,33 +1,61 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <div>
-            <h1>Header Logo</h1>
-            <link rel="stylesheet" href="www.instgram.com">
-            <link rel="stylesheet" href="www.x.com">
-            <link rel="stylesheet" href="www.facebook.com">
-        </div>
-        <div>
-        <title>This website is awesome</title>
-        <p>This website has some subtext that goes here under the main title. It's a smaller and the font color is lower contrast</p>
-        <button>Sign up</button>
-        </div>
-        </head>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/home/ben/repos/landing-page-op/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
+        <title>Landing Page - The Odin Project</title>
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
-        <script src="" async defer></script>
+    <div class="container">
+                <!-- Navigation bar -->
+        <header>
+            <div class="logo">The Cake Shop</div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Hero section -->
+        <section class="hero">
+            <div class="content-column">
+                <h1>A Piece of Cake</h1>
+                <p>We make choosing the right cake a cakewalk. Choose the perfect cake for any occasion, or just treat yourself with something special.</p>
+                <button>Cake up</button>
+            </div>
+            <div class="image-column">
+                <img src="\\wsl.localhost\Ubuntu\home\ben\repos\landing-page-op\cake-1284548_1280.jpg" alt="Cake" width="600" height="200">
+            </div>
+        </section>
+    </div>
+     <!-- Information section -->
+        <section class="information-section">
+             <div class="container">
+                <h2 class="information-heading">Some information about cake</h2>
+                <div class="image-container">
+                  <div class="image-item">
+                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\muffin-7870491_1280.jpg" alt="Cake 1">
+                     <p>Cake is yummy</p>
+                  </div>
+                  <div class="image-item">
+                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\cake-1850011_1280.jpg" alt="Cake 2">
+                     <p>Cake is funny</p>
+                  </div>
+                  <div class="image-item">
+                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\stollen-1768907_1280.jpg" alt="Cake 3">
+                     <p>Cake is love</p>
+                  </div>
+                  <div class="image-item">
+                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\cake-1227842_1280.jpg" alt="Cake 4">
+                     <p>Cake is life</p>
+                  </div>
+                </div>
+             </div>
+        </section>
     </body>
 </html>
