--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="stylesheet.css">
         <title>Landing Page - The Odin Project</title>
     </head>
     <body>
     <div class="container">
-                <!-- Navigation bar -->
+
         <header>
             <div class="logo">The Cake Shop</div>
             <nav>
@@ -21,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <!-- Hero section -->
+
         <section class="hero">
             <div class="content-column">
                 <h1>A Piece of Cake</h1>
@@ -33,7 +34,7 @@
             </div>
         </section>
     </div>
-     <!-- Information section -->
+
         <section class="information-section">
              <div class="container">
                 <h2 class="information-heading">Some information about cake</h2>
@@ -57,5 +58,43 @@
                 </div>
              </div>
         </section>
+
+        <section class="quote">
+            <div class="container">
+               <div class="quote-text">
+                "I came for a slice and stayed for the whole cake! The Cake Shop's treats are so good, I forgot my diet even existed. Now my new motto is 'a cake a day keeps the sadness away!"
+               </div>
+               <div class="quotee">
+                -Mr Cake Enjoyer
+               </div>
+            </div>
+        </section>
+
+        <section class="cta-section">
+            <div class="container">
+                <div class="cta">
+                    <div class="cta-text">
+                        <div class="cta-title">
+                            <h3>Any time is a good time for cake!</h3>
+                        </div>
+                        <div class="cta-subtext">
+                            <p>Keep up to date with all the latest news and advancements in cutting edge cake technology.</p>
+                        </div>
+                    </div>
+                    <div class="cta-button">
+                        <button>Sign up</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer">
+            <div class="container">
+                <div class="footer-text">
+                  Copyright © <a href="https://github.com/Ben-john-evans">Ben John Evans</a>
+                </div>
+            </div>
+        </section>
+
     </body>
 </html>
