Updated file names and folders

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button>Cake up</button>
             </div>
             <div class="image-column">
-                <img src="\\wsl.localhost\Ubuntu\home\ben\repos\landing-page-op\cake-1284548_1280.jpg" alt="Cake" width="600" height="200">
+                <img src="Images/cake-1284548_1280.jpg" alt="Cake" width="600" height="200">
             </div>
         </section>
     </div>
@@ -40,19 +40,19 @@
                 <h2 class="information-heading">Some information about cake</h2>
                 <div class="image-container">
                   <div class="image-item">
-                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\muffin-7870491_1280.jpg" alt="Cake 1">
+                     <img src="Images/cake-1284548_1280.jpg" alt="Cake 1">
                      <p>Cake is yummy</p>
                   </div>
                   <div class="image-item">
-                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\cake-1850011_1280.jpg" alt="Cake 2">
+                     <img src="Images/cake-1850011_1280.jpg" alt="Cake 2">
                      <p>Cake is funny</p>
                   </div>
                   <div class="image-item">
-                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\stollen-1768907_1280.jpg" alt="Cake 3">
+                     <img src="Images/stollen-1768907_1280.jpg" alt="Cake 3">
                      <p>Cake is love</p>
                   </div>
                   <div class="image-item">
-                     <img src="\\wsl.localhost\Ubuntu\home\ben\repos\cake-1227842_1280.jpg" alt="Cake 4">
+                     <img src="Images/cake-1227842_1280.jpg" alt="Cake 4">
                      <p>Cake is life</p>
                   </div>
                 </div>
